Tue Mar  1 11:31:55 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU:
          Fixed setting of CC and CXX variables (conditional assignment
          doesn't work in this case).

Tue Mar  1 07:35:43 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU:
          Added missing SOFLAGS += -pthread.

Mon Feb 28 21:05:59 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-WinCE.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-win32-interix.h:
          No need to define ACE_HAS_POSITION_INDEPENDENT_POINTERS since it
          is default setting.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect
          option from CCFLAGS; it caused an occasional odd problem and the
          only reason it was added (Jul 17 2002) was to try and remove
          duplicate symbol diagnostics from template instantiations.
          Thanks to Phil Mesnier for raising this issue and identifying
          the fix.

Mon Feb 28 13:31:50 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/index.html:
        * html/index.html:
          Mention DAnCE

Mon Feb 28 13:18:53 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/make_release.py:
          Reverted the change tagged as
          'Thu Oct 28 11:40:01 UTC 2010  Vladimir Zykov'.
